# imsosorry

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  make.ps1  noxfile.py  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: dependabot.yaml
.github/workflows/: codeflash-optimize.yaml  codspeed.yaml  dependency-review.yaml  dependency-review.yml  docs.yaml  github-pages-python-sphinx.yaml  precommit-autoupdate.yaml  python-ci.yaml  python-publish-pypi.yaml
docs/: .readthedocs.yaml  changelog.rst  conf.py
docs/source/: .readthedocs.yaml  changelog.rst  conf.py  history.rst  index.rst
js/: uwuification.js
src/imsosorry/: __init__.py  uwuification.py
src/imsosorry/uwuification/: __init__.py  constants.py  uwuifier.py
src/imsosorry/uwuification/replacers/: __init__.py  regex.py
tests/: test_uwuification.py
