[project]
name = "imsosorry"
version = "1.3.0"
description = "Sometimes it can be necessary to call upon the ancient arts..."
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@tailstory.dev" },
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
repository = "https://github.com/letsbuilda/imsosorry/"
documentation = "https://docs.letsbuilda.dev/imsosorry/"

[project.optional-dependencies]
dev = [
    "nox>=2025.5.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
    "mypy>=1.16.1",
]
tests = [
    "pytest>=8.4.1",
    "pytest-randomly>=3.16.0",
    "pytest-codspeed>=4.0.0",
]
docs = [
    "sphinx",
    "furo>=2024.8.6",
    "sphinx-autoapi>=3.6.0",
    "releases>=2.1.1",
]

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.ruff]
preview = true
unsafe-fixes = true
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY001", # (Missing copyright notice at top of file)
    "S311", # (Standard pseudo-random generators are not suitable for cryptographic purposes) - Really?
    "DOC201", # (`return` is not documented in docstring) - TODO
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
    "FA102", # (Missing `from __future__ import annotations`, but uses PEP 585 collection) - Docs are actually built on the latest stable release of Python
]
"tests/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Tests are not modules
    "S101", # (Use of `assert` detected) - Yes, that's the point
]

[tool.ruff.lint.isort]
known-first-party = ["imsosorry.uwuification"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
