[project]
name = "imsosorry"
version = "1.3.0"
description = "Sometimes it can be necessary to call upon the ancient arts..."
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@tailstory.dev" },
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
repository = "https://github.com/letsbuilda/imsosorry/"
documentation = "https://docs.letsbuilda.dev/imsosorry/"

[dependency-groups]
dev = [
    "nox>=2026.4.10",
    "prek>=0.3.8",
    "ruff>=0.15.10",
    "mypy>=1.20.0",
    "ty>=0.0.29",
]
tests = [
    "pytest>=9.0.3",
    "coverage>=7.13.5",
    "pytest-randomly>=4.0.1",
    "pytest-codspeed>=4.3.0",
]
docs = [
    "sphinx>=8.1.0",
    "furo>=2025.12.19",
    "sphinx-autoapi>=3.8.0",
    "releases>=2.1.1",
]

[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[tool.uv]
# Sync with Dependabot's uv version
required-version = ">=0.10.9"

[tool.ruff]
preview = true
unsafe-fixes = true
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY001", # (Missing copyright notice at top of file)
    "S311", # (Standard pseudo-random generators are not suitable for cryptographic purposes) - Really?
    "DOC201", # (`return` is not documented in docstring) - TODO
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
    "FA102", # (Missing `from __future__ import annotations`, but uses PEP 585 collection) - Docs are actually built on the latest stable release of Python
]
"tests/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Tests are not modules
    "S101", # (Use of `assert` detected) - Yes, that's the point
]

[tool.ruff.lint.isort]
known-first-party = ["imsosorry.uwuification"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
